# ComfyUI-JHnodes

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflow/: VideoLOOP-seedvr2+rife-example.json
jhnodes/: ffmpeg.py  nodes.py  server.py  utils.py  video_reader.py
tests/: conftest.py  test_ffmpeg_audio.py  test_folder_picker_schema.py
web/: jhnodes.js
